--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Brendan Lai-Tong: Contact</title>
 </head>
 <body>
     <div class="container">
