Styled nav bar/buttons and linked to appropriate pages

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <header>            
+        <!--Header-->
+        <header>              
+            <h1>Brendan Lai-Tong</h1>          
             <nav>
-                <h1>Brendan Lai-Tong</h1>
                 <a href="index.html" class="btn">Home</a>
                 <a href="about.html" class="btn">About</a>
                 <a href="contact.html" class="btn">Contact</a>
@@ -22,7 +23,9 @@
             </div>
             <div class="hero"></div>
         </header>
-        <section class="row-flex">
+
+        <!--Project Gallery-->
+        <section class="project-flex">
             <div>
                 Project 1
             </div>
@@ -41,6 +44,7 @@
         </section>
     </div>
 
+    <!--Footer-->
     <footer>
         
     </footer>
