--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
         <!--Project Gallery-->
         <section class="project-flex">
-            <div>
+            <div class="project">
                 Project 1
             </div>
-            <div>
+            <div class="project"> 
                 Project 2
             </div>
-            <div>
+            <div class="project">
                 Project 3
             </div>
-            <div>
+            <div class="project">
                 Project 4
             </div>
             <div>
