Adjusted nav across all pages. Enabled project section to wrap on smaller screens

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
         <header>
             <h1>ABOUT</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="projects.html">Projects</a>
+                <a href="index.html" class="btn">Home</a>
+                <a href="about.html" class="btn">About</a>
+                <a href="contact.html" class="btn">Contact</a>
+                <a href="projects.html" class="btn">Projects</a>
             </nav>
             <div>
                 <h2>Dynamic Heading</h2>
