--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--Project Gallery-->
         <section class="project-flex">
             <div class="project">
-                Project 1
+                <h3>Project 1 ></h3>
             </div>
             <div class="project"> 
                 Project 2
