--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
 
     <!--Footer-->
     <footer class="footer-flex">
+        <div></div>
         <div>
-            <a href="contact.html" class="btn">Contact Me</a>
-        </div>            
+            <a href="https://www.linkedin.com/in/brendan-lai-tong-26111b15/" target="_blank"><img src="/assets/LinkedIn-Logos/LI-In-Bug.png" class="LinkedIn"></a>
+        </div>
+        <div>
+            <a href="contact.html" class="btn footer-btn">Contact Me</a>
+        </div>       
+        <div></div>          
     </footer>
 </body>
 </html>
