--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
             </nav>
             <div>
                 <h2>Full Stack Developer - Musician</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                 when an unknown printer took a galley of type and scrambled it to
-                  make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Trombonist and music educator <span>Brendan Lai-Tong</span>, was born in Johannesburg, South Africa and is a lifelong appreciator of all things that create sound. He enjoys making music with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae.</p>
+                <p>Recently, Brendan has had the opportunity to perform with the San Francisco Opera, San Francisco Ballet, Opera San Jose, Oakland East Bay Symphony, Sacramento Philharmonic, sfSound, San Francisco Contemporary Music Players, ECO Ensemble and the Paul Dresher Ensemble.
+                    He also enjoys imparting music education to future generations through the Oakland Symphony’s MUSE Program: a multi-component music education and enrichment initiative that serves young people at public schools and community sites throughout Oakland.</p>
+                <p>Brendan studied trombone with Mark Lawrence, former principal trombonist of the San Francisco Symphony; and Tim Conner and Hugh Harbison, the principal and bass trombonists of the Florida Philharmonic. Brendan is a graduate of the San Francisco Conservatory of Music (MM) and the
+                    University of Miami (BM).</p>
+                <p>Additionally, Brendan has experience in the field of Email Marketing and Graphics Design and is comfortable working with HTML/CSS, Adobe Photoshop, GIMP, and various ESP platforms (Bronto, Cheetahmail, Mailchimp).
+                He is working to become a Full Stack Developer and started attending the Lambda School in August 2020.</p>
             </div>
             <div class="hero"></div>
         </header>
@@ -42,7 +45,9 @@
                 <h3>Project 4<h3>
             </div>
             <div class="project_info">
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                <p>Here are some of the projects I'm most proud of. These will be updated on a regular basis utilizing the newest or most interesting technologies available. React and Python projects coming soon                   
+                </p>
+                <a href="projects.html" class="btn projects-btn">My Projects -></a>
             </div>
         </section>
     </div>
