adjusted info text

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
             </nav>
             <div>
                 <h2>Full Stack Developer - Musician</h2>
-                <p>Trombonist and music educator <span>Brendan Lai-Tong</span>, was born in Johannesburg, South Africa and is a lifelong appreciator of all things that create sound. He enjoys making music with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae.</p>
-                <p>Recently, Brendan has had the opportunity to perform with the San Francisco Opera, San Francisco Ballet, Opera San Jose, Oakland East Bay Symphony, Sacramento Philharmonic, sfSound, San Francisco Contemporary Music Players, ECO Ensemble and the Paul Dresher Ensemble.
-                    He also enjoys imparting music education to future generations through the Oakland Symphony’s MUSE Program: a multi-component music education and enrichment initiative that serves young people at public schools and community sites throughout Oakland.</p>
-                <p>Brendan studied trombone with Mark Lawrence, former principal trombonist of the San Francisco Symphony; and Tim Conner and Hugh Harbison, the principal and bass trombonists of the Florida Philharmonic. Brendan is a graduate of the San Francisco Conservatory of Music (MM) and the
-                    University of Miami (BM).</p>
+                <p>Trombonist and music educator <span>Brendan Lai-Tong</span>, was born in Johannesburg, South Africa and is a lifelong appreciator of all things that create sound. He enjoys making music with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae. He is a member of the San Francisco Contemporary Music Players</p>
                 <p>Additionally, Brendan has experience in the field of Email Marketing and Graphics Design and is comfortable working with HTML/CSS, Adobe Photoshop, GIMP, and various ESP platforms (Bronto, Cheetahmail, Mailchimp).
                 He is working to become a Full Stack Developer and started attending the Lambda School in August 2020.</p>
             </div>
