--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <div>
                 <h2>Full Stack Developer - Musician</h2>
                 <p>I just started my journey the Lambda School August 2020. My previous experience is in the field of Email Marketing and Graphics Design and I'm comfortable working with HTML/CSS, Adobe Photoshop, GIMP, and various ESP platforms (Bronto, Cheetahmail, Mailchimp).
-                    </p>
-                <p>Additionally, I am a trombonist and music educator, born in Johannesburg, South Africa. I'm an appreciator of all things that create sound and have performed with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae.
+                Additionally, I am a trombonist and music educator, born in Johannesburg, South Africa. I'm an appreciator of all things that create sound and have performed with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae.
                 I'm a member of the San Francisco Contemporary Music Players</p>
             </div>
             <div class="hero"></div>
