Added footer to all pages and adjusted color

--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,16 @@
             </section>
         </div>
     
-        <footer>
-            
+            <!--Footer-->
+        <footer class="footer-flex">
+            <div></div>
+            <div>
+                <a href="https://www.linkedin.com/in/brendan-lai-tong-26111b15/" target="_blank"><img src="/assets/LinkedIn-Logos/LI-In-Bug.png" class="LinkedIn"></a>
+            </div>
+            <div>
+                <a href="contact.html" class="btn footer-btn">Contact Me</a>
+            </div>       
+            <div></div>          
         </footer>
 </body>
 </html>
