adjusted font sizing and heading margins

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!--Header-->
         <header>              
-            <h1>Brendan Lai-Tong</h1>          
+            <h1>BRENDAN LAI-TONG</h1>          
             <nav>
                 <a href="index.html" class="btn">Home</a>
                 <a href="about.html" class="btn">About</a>
@@ -21,7 +21,7 @@
                 <h2>Full Stack Developer - Musician</h2>
                 <p>I just started my journey the Lambda School August 2020. My previous experience is in the field of Email Marketing and Graphics Design and I'm comfortable working with HTML/CSS, Adobe Photoshop, GIMP, and various ESP platforms (Bronto, Cheetahmail, Mailchimp).
                 Additionally, I am a trombonist and music educator, born in Johannesburg, South Africa. I'm an appreciator of all things that create sound and have performed with a myriad of Bay Area ensembles spanning multiple genres including - classical, contemporary avant-garde, rock, jazz & reggae.
-                I'm a member of the San Francisco Contemporary Music Players</p>
+                I'm a member of the San Francisco Contemporary Music Players.</p>
             </div>
             <div class="hero"></div>
         </header>
