added accessibility link for screen readers to project gallery

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <a href="about.html" class="btn">About</a>
                 <a href="contact.html" class="btn">Contact</a>
                 <a href="projects.html" class="btn">Projects</a>
+                <!--Screen reader accessibility link-->
+                <a href="#projects" class="screen-reader">Click to skip to Projects Gallery</a>
             </nav>
             <div>
                 <h2>Full Stack Developer - Musician</h2>
@@ -28,6 +30,7 @@
 
         <!--Project Gallery-->
         <section class="project-flex">
+            <span id="projects"></span><!--Project link for screen readers-->
             <div class="project">
                 <h3>Project 1</h3>
             </div>
@@ -52,7 +55,7 @@
     <footer class="footer-flex">
         <div></div>
         <div>
-            <a href="https://www.linkedin.com/in/brendan-lai-tong-26111b15/" target="_blank"><img src="/assets/LinkedIn-Logos/LI-In-Bug.png" class="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/brendan-lai-tong-26111b15/" target="_blank"><img src="/assets/LinkedIn-Logos/LI-In-Bug.png" class="LinkedIn" alt="LinkedIn Logo"></a>
         </div>
         <div>
             <a href="contact.html" class="btn footer-btn">Contact Me</a>
