fixed button radius and added new nav to all pages

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
         <header>
             <h1>ABOUT</h1>
             <nav>
-                <a href="index.html" class="btn">Home</a>
-                <a href="about.html" class="btn">About</a>
-                <a href="contact.html" class="btn">Contact</a>
-                <a href="projects.html" class="btn">Projects</a>
+                <a href="index.html" class="btn nav">Home</a>
+                <a href="about.html" class="btn nav">About</a>
+                <a href="contact.html" class="btn nav">Contact</a>
+                <a href="projects.html" class="btn nav">Projects</a>                                
             </nav>
             <div>
                 <h2>Dynamic Heading</h2>
