--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,13 @@
         <header>              
             <h1>BRENDAN LAI-TONG</h1>          
             <nav>
-                <a href="index.html" class="btn">Home</a>
-                <a href="about.html" class="btn">About</a>
-                <a href="contact.html" class="btn">Contact</a>
-                <a href="projects.html" class="btn">Projects</a>
-                <!--Screen reader accessibility link-->
-                <a href="#projects" class="screen-reader">Click to skip to Projects Gallery</a>
+                <a href="index.html" class="btn nav">Home</a>
+                <a href="about.html" class="btn nav">About</a>
+                <a href="contact.html" class="btn nav">Contact</a>
+                <a href="projects.html" class="btn nav">Projects</a>                                
             </nav>
+            <!--Screen reader accessibility link-->
+            <a href="#projects" class="screen-reader">Click to skip to Projects Gallery</a>
             <div>
                 <h2>Full Stack Developer - Musician</h2>
                 <p>I just started my journey the Lambda School August 2020. My previous experience is in the field of Email Marketing and Graphics Design and I'm comfortable working with HTML/CSS, Adobe Photoshop, GIMP, and various ESP platforms (Bronto, Cheetahmail, Mailchimp).
